# pixelpusher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pixelpusher.sublime-project
dart/runtime/: .gitignore  CMakeLists.txt  pubspec.yaml
dart/runtime/lib/: main.dart
idl/: dart.template.epoxy
source/: CMakeLists.txt  main.cc
source/core/: CMakeLists.txt  auto_closure.h  closure.cc  closure.h  event_loop.cc  event_loop.h  event_loop_unittests.cc  file.cc  file.h  file_unittests.cc  filesystem_watcher.cc  filesystem_watcher.h  filesystem_watcher_darwin.cc  filesystem_watcher_darwin.h  filesystem_watcher_win.cc  filesystem_watcher_win.h  fixture.h.in  geometry.h  hash.cc  hash.h  image_decoder.cc  image_decoder.h  logging.h  macros.h  mapping.cc  mapping.h  platform.h  string_utils.cc  string_utils.h  string_utils_unittests.cc  thread.cc  thread.h  unique_object.h  unshared_weak.cc  unshared_weak.h  unshared_weak_unittests.cc  win_utils.cc  win_utils.h
source/machine/: CMakeLists.txt  application.cc  application.h  asset_loader.cc  asset_loader.h  asset_loader_unittests.cc  assets_location.h.in  command_buffer.cc  command_buffer.h  command_pool.cc  command_pool.h  descriptor_pool.cc  descriptor_pool.h  fence_waiter.cc  fence_waiter.h  glfw.h  glm.h  image.cc  image.h  image_decoder.cc  image_decoder.h  imgui_connection.cc  imgui_connection.h  imgui_renderer.cc  imgui_renderer.h  key_input.cc  key_input.h  key_input_glfw.cc  key_input_glfw.h  main.cc  main_renderer.cc  main_renderer.h  matrix_simulation.cc  matrix_simulation.h  memory_allocator.cc  memory_allocator.h  model.cc  model.h  model_draw_data.cc  model_draw_data.h  (+45 more)
source/machine/runtime/: application.cc  application.h  pixel.cc  pixel.h  scene.h
source/machine/shaders/: model_renderer.frag  model_renderer.h  model_renderer.vert  triangle.h  triangle.vert
source/runtime/: CMakeLists.txt  object.cc  object.h  object_unittests.cc  peer_object.cc  peer_object.h  peer_object_unittests.cc  runtime.cc  runtime.h
source/vulkan/: CMakeLists.txt  vulkan_application.cc  vulkan_application.h  vulkan_backbuffer.h  vulkan_command_buffer.h  vulkan_debug_report.cc  vulkan_device.cc  vulkan_device.h  vulkan_image.h  vulkan_swapchain.cc  vulkan_swapchain.h  vulkan_utilities.cc  vulkan_utilities.h  vulkan_window.cc  vulkan_window.h
test/: CMakeLists.txt
tools/: epoxy.cmake  flutter_engine.cmake  pixel_app.cmake  spirv.cmake
