add_library(vulkan
  vulkan_application.cc
  vulkan_application.h
  vulkan_backbuffer.cc
  vulkan_backbuffer.h
  vulkan_command_buffer.cc
  vulkan_command_buffer.h
  vulkan_debug_report.cc
  vulkan_debug_report.h
  vulkan_device.cc
  vulkan_device.h
  vulkan_handle.cc
  vulkan_handle.h
  vulkan_image.cc
  vulkan_image.h
  vulkan_interface.cc
  vulkan_interface.h
  vulkan_native_surface.cc
  vulkan_native_surface.h
  vulkan_native_surface_android.cc
  vulkan_native_surface_android.h
  vulkan_proc_table.cc
  vulkan_proc_table.h
  vulkan_provider.cc
  vulkan_provider.h
  vulkan_surface.cc
  vulkan_surface.h
  vulkan_swapchain.cc
  vulkan_swapchain.h
  vulkan_swapchain_stub.cc
  vulkan_utilities.cc
  vulkan_utilities.h
  vulkan_window.cc
  vulkan_window.h
)

target_link_libraries(vulkan PRIVATE core)

target_include_directories(vulkan
  PRIVATE
    /usr/local/include
)
